# a2a-python

./: pyproject.toml
.github/actions/spelling/: allow.txt
examples/apicatalog/: README.md  __main__.py  agent_executors.py  pyproject.toml  test_client.py
src/a2a/: types.py
src/a2a/client/: grpc_client.py
src/a2a/server/apps/: __init__.py  starlette_app.py
src/a2a/server/apps/jsonrpc/: __init__.py  fastapi_app.py  jsonrpc_app.py  starlette_app.py
src/a2a/utils/: proto_utils.py
tests/client/: test_grpc_client.py
tests/server/apps/jsonrpc/: test_fastapi_app.py  test_jsonrpc_app.py  test_starlette_app.py
tests/server/events/: test_event_consumer.py
