[project]
name = "apicatalog"
version = "0.1.0"
description = "Minimal example agent with API Catalog support, similar to HelloWorld"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "a2a-sdk",
    "click>=8.1.8",
    "dotenv>=0.9.9",
    "httpx>=0.28.1",
    "uvicorn>=0.34.2",
    "python-dotenv>=1.1.0",
]

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.uv.sources]
a2a-sdk = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
